--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -28,6 +28,10 @@ TO-DO NOTES
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!!!
+===> Search for DataValidationChecking in /app-lib/php/classes/core/cache.php, to CONSERVATIVELY
+===> add / remove / modify checks on external API results (to allow graceful cache fallbacks).
+===> BE CAREFUL, AS THIS CAN BLOCK THE APP FROM USING VALID DATA, IF YOUR CHECKS ARE INCORRECT!
+!!!!
 ===> Keep an eye out for EFFECTS ON any 3rd party libraries using the 'unload' eventListener,
 ===> as it was FULLY DEPRECIATED / DISABLED in chrome at the end of 2024:
 ===> https://developer.chrome.com/docs/web-platform/deprecating-unload                                                                                   
@@ -134,12 +138,6 @@ If new testing was added, add it to the package testing notes.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! 
-
-
-Update the project page footer notice, to match the revised APP footer notice about donations.
-
-
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
 Add full redhat support for auto-installer.
