--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -28,6 +28,10 @@ TO-DO NOTES
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!!!
+===> Search for DataValidationChecking in /app-lib/php/classes/core/cache.php, to CONSERVATIVELY
+===> add / remove / modify checks on external API results (to allow graceful cache fallbacks).
+===> BE CAREFUL, AS THIS CAN BLOCK THE APP FROM USING VALID DATA, IF YOUR CHECKS ARE INCORRECT!
+!!!!
 ===> Keep an eye out for EFFECTS ON any 3rd party libraries using the 'unload' eventListener,
 ===> as it was FULLY DEPRECIATED / DISABLED in chrome at the end of 2024:
 ===> https://developer.chrome.com/docs/web-platform/deprecating-unload                                                                                   
@@ -133,7 +137,7 @@ Think over what other "FAQ page / TROUBLESHOOTING.txt" entries would be helpful.
 If new testing was added, add it to the package testing notes. 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! 
 
 
 Add full redhat support for auto-installer.
@@ -151,13 +155,13 @@ Test reset of the upgrade notice upon admin login, by triggering the 'upgrade av
 Put my whole crypto safety article ( https://x.com/taoteh1221/status/1911201660623290701 ) in a modal window like the Help FAQ section, and link into my app's sidebar as a link called "Safely Holding Crypto". Add the stuff in our security footer banner too.
 
 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-
 For app marketing, make a user account at https://buymeacoffee.com
 
 
 If plugin runtime is all | webhook, put in parentheses next to this summary to view the documentation page, for webhook usage details.
+
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
 On the plugins admin page, add a title "How to make your own custom plugin", with a link to the plugin documentation on github.
